service/mysql.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    type: NodePort
    ports:
    - name: mysql
      port: 3306
      nodePort: 33306
    selector:
        app: mysql
