service/nginx.yaml
apiVersion: v1
kind: Service
metadata:
    name: xyk-nginx
spec:
    type: NodePort
    ports:
    - name: xiaoyinka
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: api
      port: 9090
      targetPort: 9090
      protocol: TCP
    selector:
        app: nginx
