service/php-fpm.yaml
apiVersion: v1
kind: Service
metadata:
    name: php-fpm
spec:
    ports:
    - name: php-fpm
      port: 9000
      targetPort: 9000
      protocol: TCP
    selector:
      app: php-fpm
