service/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: LoadBalancer
  ports:
    - name: xyk
      port: 8080
      targetPort: 8080
    - name: api
      port: 9090
      targetPort: 9090
  selector:
    app: nginx
